# native_splash_screen

./: .clang-format  .fvmrc  .gitignore  Makefile  README.md
native_splash_screen/: CHANGELOG.md  README.md  pubspec.yaml
native_splash_screen/example/: native_splash_screen.yaml  pubspec.yaml
native_splash_screen/example/lib/: main.dart
native_splash_screen/example/linux/runner/: main.cc  (+6 more)
native_splash_screen/example/windows/: CMakeLists.txt
native_splash_screen/lib/: native_splash_screen.dart
native_splash_screen/lib/src/: native_splash_screen.dart
native_splash_screen_cli/: CHANGELOG.md  README.md  pubspec.yaml
native_splash_screen_cli/lib/common/: const.dart  utils.dart
native_splash_screen_cli/lib/models/: config.dart  desktop.dart  flavor.dart  image.dart  platforms.dart
native_splash_screen_cli/lib/src/: generator.dart  image.dart  linux.dart  logger.dart  macos.dart  windows.dart
native_splash_screen_cli/lib/templates/: _config.dart  linux.dart  linux_build.dart  linux_cmake.dart  macos.dart  macos_build.dart  macos_swift.dart  windows.dart  windows_build.dart  windows_cmake.dart
native_splash_screen_linux/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
native_splash_screen_linux/lib/: native_splash_screen_linux.dart
native_splash_screen_linux/lib/src/: native_splash_screen_linux.dart
native_splash_screen_linux/linux/: CMakeLists.txt  native_splash_screen_linux_plugin.cc  native_splash_screen_linux_plugin_private.h
native_splash_screen_linux/linux/include/native_splash_screen_linux/: native_splash_screen_linux_plugin.h
native_splash_screen_macos/: CHANGELOG.md  README.md  pubspec.yaml
native_splash_screen_macos/.dart_tool/: package_config.json  package_config_subset
native_splash_screen_macos/.dart_tool/extension_discovery/: vs_code.json
native_splash_screen_macos/lib/: native_splash_screen_macos.dart
native_splash_screen_macos/macos/: native_splash_screen_macos.podspec
native_splash_screen_platform_interface/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
native_splash_screen_platform_interface/lib/: native_splash_screen_platform_interface.dart
native_splash_screen_windows/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
native_splash_screen_windows/lib/: native_splash_screen_windows.dart
native_splash_screen_windows/windows/: CMakeLists.txt  native_splash_screen_windows_plugin.cpp  native_splash_screen_windows_plugin.h  native_splash_screen_windows_plugin_c_api.cpp
(+24 files in other folders)
